@@ -4,6 +4,7 @@ clean:
 		*.pdf *.tex *.aux *.dvi *.idx *.ilg *.out\
 		*.ind *.log *.toc *~ \#* *.ps */*.css */*.pl *.gif core *.glo
 	rm -rf sdcc-doc sdcc-doc.tar.bz2
+	if [ "$(srcdir)" != "." ]; then rm *.lyx; fi
 
 # Deleting all files created by configuring or building the program
 # -----------------------------------------------------------------
